# sandbox-rs

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: check-nearcore-release.yml
examples/: README.md  create_account_and_send_near.rs  custom_config.rs  custom_genesis.rs  query_default_genesis.rs
scripts/: check-nearcore-release.js
src/: lib.rs  sync.rs
src/high_level/: config.rs  mod.rs
