[package]
name = "near-sandbox-utils"
version = "0.15.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/sandbox"
description = """
Utility library for launching NEAR sandbox environments.
"""

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["process", "net"] }
binary-install = "0.2.0"
fs2 = "0.4"
home = "0.5.5"

tempfile = "3.19"
json-patch = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
reqwest = "0.12.20"

near-account-id = "1.1.2"
near-crypto = "0.30.3"
near-token = "0.3.0"

rand = { version = "0.8.4", optional = true }
chrono = { version = "0.4", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
bs58 = { version = "0.4.0", optional = true }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
near-api = "0.6.1"

[features]
generate = ["rand", "chrono", "ed25519-dalek", "bs58"]
global_install = []
